--- a/CachingDynamicDecorator/CachingDynamicDecorator.csproj
+++ b/CachingDynamicDecorator/CachingDynamicDecorator.csproj
@@ -32,7 +32,7 @@
   <ItemGroup>
     <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>Dependencies\Castle.Core.dll</HintPath>
+      <HintPath>lib\Castle.Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
